# audiowhisper

./: .gitignore  README.md  audiowhisper.py  jpwhisper.py  main.py  pyproject.toml
src/: __init__.py  audio_utils.py  file_manager.py  output_formats.py  transcription.py  utils.py
